--- a/index.html
+++ b/index.html
@@ -1,1 +1,74 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Nicky | Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <div class="container nav-container">
+      <h1 class="logo">Nicky</h1>
+      <nav>
+        <ul>
+          <li><a href="#hero">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
+  <section id="hero">
+    <div class="container">
+      <h2>Hi, I’m Nicky 👋</h2>
+      <p>I’m currently beginning my journey in web development, with a keen interest in frontend technologies and design..</p>
+    </div>
+  </section>
+
+  <section id="about">
+    <div class="container">
+      <h2>About Me</h2>
+      <p>I’m currently pursuing my B.Tech in Computer Science and learning frontend development. I enjoy building clean, user-friendly web experiences and exploring the latest web technologies.</p>
+    </div>
+  </section>
+
+  <section id="projects">
+    <div class="container">
+      <h2>Projects</h2>
+      <div class="project-grid">
+        <div class="project-card">
+          <h3>Real-Time Chat App</h3>
+          <p>Built with React and Socket.IO. A responsive app with live messaging and a clean dark UI.</p>
+          <a href="https://github.com/yourgithub/popeye-chat-app" target="_blank">View Project</a>
+        </div>
+        <div class="project-card">
+          <h3>Quiz App</h3>
+          <p>Interactive quiz built using JavaScript. Features score tracking and instant feedback.</p>
+          <a href="https://github.com/yourgithub/quiz-app" target="_blank">View Project</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="contact">
+  <div class="container">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:nikkim4522@gmail.com">nikkim4522@gmail.com</a></p>
+    <p>Phone: <a href="tel:+919356614829">+91 93566 14829</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/nickymeshram" target="_blank">
+      linkedin.com/in/nickymeshram
+    </a></p>
+  </div>
+</section>
+
+
+  <footer>
+    <div class="container">
+      <p>© 2025 Nicky Meshram. All rights reserved.</p>
+    </div>
+  </footer>
+</body>
+</html>
